--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
 
-    <title>Sparta Coding Club | Bootstrap Practice</title>
+    <title>Experiment Project 1</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
