--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <!-- my style -->
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -58,18 +65,19 @@
               let file = articles[i]["file"];
               let profile = articles[i]["profile"];
               let temp_html = `
-              <div class="col-4">
-                <div class="card">
-                  <img src="../${file}" class="card-img-top" alt=".....sedang memuat foto"/>
-                  <div class="card-body">
-                    <img src="../${profile}" class="card-img-top" alt=".....sedang memuat foto"/>
-                    <h5 class="card-title">${title}</h5>
-                    <p class="card-text">${content}</p>
-                    <h6 class="card-subtitle mb-2 text-muted">2022.02.15</h6>
+                  <div class="col-4">
+                      <div class="card" style="max-width: 100%; height: auto;">
+                          <img src="../${file}" class="card-img-top" style="max-width: 100%; height: auto;" alt=".....sedang memuat foto"/>
+                          <div class="card-body">
+                              <img src="../${profile}" style="border-radius: 50%; width: 100px; height: 100px;" class="card-img-top" alt=".....sedang memuat foto"/>
+                              <h5 class="card-title">${title}</h5>
+                              <p class="card-text">${content}</p>
+                              <h6 class="card-subtitle mb-2 text-muted">2022.02.15</h6>
+                          </div>
+                      </div>
                   </div>
-                </div>
-              </div>
               `;
+
               $("#cards-box").append(temp_html);
             }
           },
