--- a/templates/index.html
+++ b/templates/index.html
@@ -118,12 +118,12 @@
       }
     </script>
   </head>
-
+      <!------------------ body ------------------>
   <body>
     <div class="container">
       <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Tugas Maulana Yusuf Zn.| Diary</h1>
+          <h1 class="display-5 fw-bold">Tugas Maulana Yusuf Zn.| Personal Diary</h1>
           <div class="input-group mb-3 custom-file">
             <input type="file" class="form-control" id="image" />
           </div>
